objects/PFile_Data__c.object
<CustomObject>
    <fields>
        <fullName>Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipName>Custom_Yield_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Desc__c</fullName>
        <label>PF Desc</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PF Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Stat__c</fullName>
        <label>PF Stat</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revision</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PFile Data</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>PFile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PFiles Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>